Details
-
Bug
-
Status: Resolved
-
Critical
-
Resolution: Fixed
-
Impala 2.3.0
-
None
-
impalad version 2.3.0-cdh5.5.0 DEBUG (build c0cd8f41ea85cb8d1f389c108ef255b42ae5eadd)
Built on Wed, 14 Oct 2015 23:19:27 PST
Description
This is on the latest 2.3.0 build.
The random stress test crashed while trying to find the mem limit for the query below.
USE randomness; SET MEM_LIMIT=168M; SELECT FIRST_VALUE(LEAST(COALESCE((-826.868691092) * (-632), 860.866766604), -762)) OVER (ORDER BY t1.char0131_col_2 DESC, t1.timestamp_col_3) AS float_col FROM table_1 t1 WHERE (t1.int_col_8) >= (t1.smallint_col_7);
I was able to repro with the steps above.
Crash info
F1015 14:04:33.435166 17049 sorter.cc:1079] Check failed: sorted_runs_.back()->is_pinned_ [...skipped...] #6 0x000000000205dd2d in google::LogMessageFatal::~LogMessageFatal() () #7 0x000000000170290f in impala::Sorter::GetNext(impala::RowBatch*, bool*) () #8 0x00000000016a11ee in impala::SortNode::GetNext(impala::RuntimeState*, impala::RowBatch*, bool*) () #9 0x000000000155f9c0 in impala::PlanFragmentExecutor::GetNextInternal(impala::RowBatch**) () #10 0x000000000155e1da in impala::PlanFragmentExecutor::OpenInternal() () #11 0x000000000155dea0 in impala::PlanFragmentExecutor::Open() () #12 0x0000000001331374 in impala::FragmentMgr::FragmentExecState::Exec() () #13 0x0000000001329994 in impala::FragmentMgr::FragmentExecThread(impala::FragmentMgr::FragmentExecState*) () #14 0x000000000132d384 in boost::_mfi::mf1<void, impala::FragmentMgr, impala::FragmentMgr::FragmentExecState*>::operator()(impala::FragmentMgr*, impala::FragmentMgr::FragmentExecState*) const () #15 0x000000000132d13d in void boost::_bi::list2<boost::_bi::value<impala::FragmentMgr*>, boost::_bi::value<impala::FragmentMgr::FragmentExecState*> >::operator()<boost::_mfi::mf1<void, impala::FragmentMgr, impala::FragmentMgr::FragmentExecState*>, boost::_bi::list0>(boost::_bi::type<void>, boost::_mfi::mf1<void, impala::FragmentMgr, impala::FragmentMgr::FragmentExecState*>&, boost::_bi::list0&, int) () #16 0x000000000132ca25 in boost::_bi::bind_t<void, boost::_mfi::mf1<void, impala::FragmentMgr, impala::FragmentMgr::FragmentExecState*>, boost::_bi::list2<boost::_bi::value<impala::FragmentMgr*>, boost::_bi::value<impala::FragmentMgr::FragmentExecState*> > >::operator()() () #17 0x000000000132c373 in boost::detail::function::void_function_obj_invoker0<boost::_bi::bind_t<void, boost::_mfi::mf1<void, impala::FragmentMgr, impala::FragmentMgr::FragmentExecState*>, boost::_bi::list2<boost::_bi::value<impala::FragmentMgr*>, boost::_bi::value<impala::FragmentMgr::FragmentExecState*> > >, void>::invoke(boost::detail::function::function_buffer&) () #18 0x00000000011f800d in boost::function0<void>::operator()() const () #19 0x0000000001412f0a in impala::Thread::SuperviseThread(std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, boost::function<void ()()>, impala::Promise<long>*) ()